--- a/calculadora.css
+++ b/calculadora.css
@@ -13,20 +13,24 @@ body {
     width: 100%;
     max-width: 350px; 
     height: 500px;
-    background-color: rgb(178, 173, 171);
+    background-color: rgb(0, 0, 0);
     border-radius: 14px;
 }
 
 #title {
     margin-left: 30px;
+    color: rgb(30, 112, 30);
 }
 
 #result-field {
     width: 320px;
-    height: 40px;
-    margin-left: 10px;
+    height: 45px;
+    margin-left: 13px;
     margin-bottom: 30px;
-    font-size: 20px;
+    font-size: 25px;
+    background-color: rgb(104, 101, 101);
+    border-radius: 10px;
+    border: none;
 }
 
 
@@ -34,27 +38,40 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(5, 60px); 
-    gap: 5px;
+    gap: 8px;
     margin: 5px;
     width: 320px;
     margin-left: 15px;
 }
 
 #btn-container button {
-    background-color: whitesmoke;
     font-family: "sans-serif";
     font-size: 25px;
-    background-color: antiquewhite;
+    background-color: rgb(168, 122, 36);
+    border-radius: 20px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+#btn-container button:hover {
+    background-color: rgb(138, 99, 27);
 }
 
 
-button:nth-child(16) {
+#btn-container button:nth-child(16) {
     grid-row: span 2; 
-    background-color: rgb(146, 97, 5);
 }
 
 
-button:nth-child(17) {
+#btn-container button:nth-child(17) {
     grid-column: span 2;
 }
     
+#btn-container button.btn-side {
+    background-color: rgb(30, 112, 30);
+}
+
+#btn-container button.btn-side:hover {
+    background-color: rgb(22, 87, 22);
+}
